--- a/mid.html
+++ b/mid.html
@@ -79,17 +79,22 @@
       </div>
     </nav>
 </header>
+
+<!-- BANNER -->
   <div>
 <img src="multimedia/syndra.jpg" alt="" width="100%">
 </div>
 
 
+<!-- INTRODUCCION MID LANE -->
 <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
   <div class="texto"> <!--Bloque-->
     <h1 class="texto__titulo">Lista de tiers predictivos para el carril Central</h1>
      <p class="texto__texto">Aquí encontrarás el podio con los tres mejores picks para el carril central, además de links directos a la sección específica del campeón en probuilds.com</p>
   </div>
 </div>
+
+<!-- PODIO -->
 
   <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot bordeSolido pad20 mar40">
     <div class="col row-cols-md-">
@@ -127,6 +132,9 @@
       </div>
     </div>
   </div>
+
+<!-- PRESENTACION DE CAMPEON DESTACADO -->
+
   <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
       <h3 class="texto__titulo">Campeón destacado: Vladimir</h3>
@@ -137,23 +145,61 @@
     </div>
   </div>
 
+<!-- RUNAS Y BUILD CAMPEON DESTACADO -->
+
   <section class="runasybuild centrar">
     <img class="centrar" src="multimedia/vladi.png" alt="">
-    <img class="centrar" src="multimedia/.png" alt="">
   </section>
 
-  <p class="experto pad20 centrar">
+<!-- INTRODUCCION A VIDEO -->
 
-        <iframe width="50%" height="540" src="https://www.youtube.com/watch?v=kBA2eK7fTak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+    <div class="texto"> <!--Bloque-->
+      <h3 class="texto__titulo"> Video informativo y didáctico </h3>
+        <p class="texto__texto">¡A continuación verás un video didactico altamente recomendado para poder aprender a jugar el campeon que recomendamos y cansarte de ganar partidas en soloQ!</p>
+    </div>
+  </div>
+  
 
+<!-- VIDEO COMPLEMENTARIO -->
+
+  <p class="experto pad20 centrar margenBot">
+        <iframe width="50%" height="540" src="https://www.youtube.com/embed/QnRrfDmz3Ag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
   </p>
+
+  <main class="gridContainer2  container mx-auto w-26 turboMain margenBot">
+    <h2 class="tituloCounters centrado margenBot">Campeones <span class="verde">débiles</span> y <span class="rojo">fuertes</span> para Vladimir </h2>
+    <section class="margencito ffl margenBot "><img class="ffl bordeVerde floatLeft" src="multimedia/fase rush.jpg" alt="" height="50%" width="50%">
+      <p class="dColumn"><img class="bordeVerde" src="multimedia/adcs.jpg" alt="" width="100%" height="100%">
+      <img class="bordeVerde" src="multimedia/magos lol.jpg" alt="" width="100%" height="100%">
+      <img  class="bordeVerde"src="multimedia/build.jpg" alt="" width="100%" height="100%"></p>
+      
+      </p><p class="centrado">   </p></section>
+      <section class="margencito ffl"><p class="centrado"> <ul class="listasTips">
+        <li>Vlad es un campeon que depende mucho del burst que es capaz de hacer, por ende es un campeon que busca SIEMPRE intercambios cortos, para realizarlos, se beneficia mucho de la Fase veloz tanto para alejarse como para acercarse, ya que su kit de habilidades carece de movilidad, por lo cual esta runa es perfecta para Vlad.</li>
+        <li>Los jugadores de magos y tiradores subestiman mucho a Vladimir, así que esto es un punto a favor para nosotros y para el daño que podemos hacer, tanto a uno como a varios objetivos, matandolos de un combo la mayoría de las veces. </li>
+        <li>Vladimir es un campeón débil en el juego temprano, muy diferente al monstruo que es en juego tardío, pero la solución a llegar antes a ser relevante en la partida, es el sombrero mortífero de Rabadón inmediatamente después de nuestro item místico, sea Protocinturón o Cosechador Nocturno, potencia MUCHO el daño de Vladimir</li>
+      </ul>    </p></section>
+    <section class="margencito">
+      <img class="ffl bordeRojo" src="multimedia/kled.jpg" alt="" height="60%" width="100%"> 
+      <p class="Dinline"><img class="bordeRojo"  src="multimedia/mundo.jpg" alt="" height="20%" width="40%" >
+      <img  class="bordeRojo" src="multimedia/aatrox.jpg" alt="" height="20%" width="30%" >
+      <img class="bordeRojo"  src="multimedia/anivia.jpg" alt="" height="20%" width="30%" ></p>
+      <p class="centrado">    </p> </section>
+    <section class="margencito ffl"><p class="centrado"> <ul class="listasTips">
+    <li>Kled es por excelencia el peor campeón contra el que Vladimir puede jugar, el protagonista de sus pesadillas, su gancho puede atraparlo estando en el pool (W), como tambien atraerlo. Gracias a la pasiva de Kled, a su curacion, a su daño y sus escudos, es totalmente imposible que Vladimir haga algo en contra suyo.</li>
+    <li>Dr. Mundo es otra pesadilla para Vladimir, realmente, la única forma de que pueda ganarle es ignorarlo e intentar destruir a todo su equipo, pero SIEMPRE ignorando a Mundo, Vlad es incapaz de hacerle daño debido a su resistencia y curacion por segundo, dejemos que se encargue el ADC.</li>
+    <li>Aatrox es parecido a Mundo, pero es mucho más dificil de ignorar debido a los saltos que tiene, puede estar siempre encima tuyo, de igual forma vamos a repetir el mismo metodo que contra Mundo, lo ignoramos e intentamos matar a su backlane por nuestra cuenta, algunos campeones parecidos a Aatrox son: Irelia, Garen, Darius</li>
+    <li>Anivia es lo peor que podes cruzar en la Mid lane, inutiliza a Vladimir de todas las formas posibles, no puede pushear ninguna wave, no peude hacerle all-in debido a su pasiva, no puede rotar, hay que jugar a escalar y farmear lo posible sin morir.</li>
+  </ul>    </p></section>
+  </main>
 
   <footer> <!--Bloque-->
     <div class="centrar">
       <div class="container">
-        <div class="row">
+        <div id="grideano" class="row">
           <div class="col-4">
-            <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+            <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
             <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
             <p> Mantenete enterado: <br> 
               <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -164,49 +210,50 @@
             <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
           </div>
           <!-- top -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">TOP</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="top.html">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón </a></p>
+            <p class="pad20"><a href="#">Video informativo </a></p>
           </div>
           <!-- jg -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">JUNGLA</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón    </a></p>
+            <p class="pad20"><a href="#">Video informativo    </a></p>
           </div>
           <!-- mid -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">MID</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón    </a></p>
+            <p class="pad20"><a href="#">Video informativo    </a></p>
           </div>
           <!-- adc -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">ADC</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón    </a></p>
+            <p class="pad20"><a href="#">Video informativo    </a></p>
           </div>
           <!-- supp -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">SUPPORT</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón    </a></p>
+            <p class="pad20"><a href="#">Video informativo    </a></p>
           </div>
           
         </div>
       </div>
   </div>
+
 </footer>
 
 
