--- a/supp.html
+++ b/supp.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Pagina exclusivamente dedicada a ofrecerte los mejores picks para cada parche de LeagueofLegends y abusar en soloQ!">
     <meta name="keywords" content="soloq meta tierlist leagueoflegends bestpicks mejorespicks campeonesfuertes soloqabuser campeones-rotos como-ganar-soloq composiciones-lol">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Meta abuser</title>
+    <title>Supp - Meta abuser</title>
     <link rel="icon" href="multimedia/logo-meta-abuser-claro.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&display=swap" rel="stylesheet">
@@ -24,6 +24,7 @@
 <body class="">
   <header>
     <!-- NAVBAR -->
+      <!-- NAVBAR -->
     <nav class="navbar grisesito" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="index.html">
@@ -79,11 +80,13 @@
     </nav>
 </header>
 
-
+<!-- BANNER -->
   <div class="">
     <img src="multimedia/thresh.jpg" alt="" width="100%">
   </div>
 
+
+  <!-- INTRO -->
     <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
       <div class="texto"> <!--Bloque-->
         <h1 class="texto__titulo">Lista de tiers predictivos para Soporte</h1>
@@ -91,6 +94,8 @@
       </div>
     </div>
 
+
+    <!-- PODIO -->
   <div class="row row-cols-2 row-cols-md-4 g-1 centrado centrar">
     <div class="col row-cols-md-">
       <div class="card h-100">
@@ -127,6 +132,8 @@
     </div>
   </div>
   
+
+  <!-- INTRODUCCION MEJOR CAMPEON DEL PARCHE -->
   <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
       <h3 class="texto__titulo">Mejor SUPP del parche: Lulu</h3>
@@ -138,18 +145,39 @@
     </div>
   </div>
 
+
+  <!-- RUNAS Y BUILD -->
+  <section class="runasybuild centrar">
+    <img class="centrar" src="multimedia/lulusovich.png" alt="">
+    <img class="centrar" src="multimedia/.png" alt="">
+  </section>
+
+  <!-- INTRODUCCION A VIDEO -->
+
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+    <div class="texto"> <!--Bloque-->
+      <h3 class="texto__titulo"> Video informativo y didáctico </h3>
+        <p class="texto__texto">¡A continuación verás un video didactico altamente recomendado para poder aprender a jugar el campeon que recomendamos y cansarte de ganar partidas en soloQ!</p>
+    </div>
+  </div>
+  
+
+<!-- VIDEO COMPLEMENTARIO -->
+
   <p class="experto pad20 centrar margenBot">
     <iframe width="50%" height="540" src="https://www.youtube.com/embed/MLEHkjc89V8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
       </p>
 
+
+  <!-- SINERGIAS CON CAMPEON -->
       <main class="gridContainer  container mx-auto w-26 turboMain margenBot">
         <h2 class="tituloCounters centrado">Tiradores <span class="verde">fuertes</span> y <span class="rojo">débiles</span> con Lulu aliada</h2>
-        <section class="margencito"><img class="ffl bordeVerde" src="multimedia/kogmaw.jpg" alt="" height="100%" width="100%"><p class="centrado"></p>         </section>
-        <section class="margencito ffl"><img class="ffl bordeVerde" src="multimedia/vayne.jpg" alt="" height="100%" width="100%"><p class="centrado"></p>        </section>
-        <section class="margencito ffl"><img class="ffl bordeVerde" src="multimedia/jinx.jpg" alt="" height="100%" width="100%"><p class="centrado">increible combo</p></section>
-        <section class="margencito ffl"> <img class="ffl bordeRojo" src="multimedia/kalista.jpg" alt="" height="100%" width="100%"><p class="centrado"></p>        </section>
-        <section class="margencito ffl"> <img class="ffl bordeRojo" src="multimedia/sivir.jpg" alt="" height="100%" width="310%"><p class="centrado"></p>        </section>
-        <section class="margencito ffl"><img class="ffl bordeRojo" src="multimedia/ashe.jpg" alt="" height="100%" width="100%"><p class="centrado"></p>        </section>
+        <section class="margencito"><img class="ffl bordeVerde" src="multimedia/kogmaw.jpg" alt="" height="100%" width="100%"><p class="centrado"> El kit de Lulu es perfecto para KogMaw. Tiene un escudo, una mejora de velocidad de ataque y velocidad de movimiento que KogMaw puede usar muy bien con su W y para hacer kite. Además, siempre que Lulu usa una habilidad en un aliado, su pequeña hada "duendecillo" viaja hacia esa persona y ataca también con cada autoataque que hace el aliado.   </p> </section>
+        <section class="margencito ffl"><img class="ffl bordeVerde" src="multimedia/vayne.jpg" alt="" height="100%" width="100%"><p class="centrado"> Este dúo depende mucho de la habilidad de la Vayne, ya que es un campeón que requiere una destreza y habilidad de kiteo superior a Kog'Maw, pero si el ADC domina Vayne, es un duo imparable.   </p></section>
+        <section class="margencito ffl"><img class="ffl bordeVerde" src="multimedia/jinx.jpg" alt="" height="100%" width="100%"><p class="centrado">Hay poco que decir de esta combinación Lulu-Jinx, es caos, destrucción y frenesí, si logran un derribo y Jinx saca un reset de su pasiva, mas la W de lulu, es una ametralladora, que no solo dispara si no que es inalcanzable por su velocidad y derriten cualquier escuadra que tengan en frente.   </p></section>
+        <section class="margencito ffl"> <img class="ffl bordeRojo" src="multimedia/kalisteana.jpg" alt="" height="100%" width="100%"><p class="centrado">Es un dúo increiblemente débil en early, sobre todo en early, Kalista es un campeón que necesita espacio y tiempo para poder hacer daño, Lulu no es capaz de brindarle ninguna de las dos.  </p></section>
+        <section class="margencito ffl"> <img class="ffl bordeRojo" src="multimedia/sivir.jpg" alt="" height="100%" width="100%"><p class="centrado">Muy parecido a Kalista, Sivir es una campeona muy débil en early, y el rol que adopa Lulu con ella en vez de ser HyperCarry como tal, pasa a ser su guardaespaldas, porque no va a hacer otra cosa que morir.  </p></section>
+        <section class="margencito ffl"><img class="ffl bordeRojo" src="multimedia/varus.jpg" alt="" height="100%" width="100%"><p class="centrado"> Varus es un campeón que centra su daño en sus habilidades y no en sus autoataques, recordemos que nosotros como Lulu necesitamos un ADC que sea capaz de hacer el mayor daño por segundo posible, no un mago.   </p></section>
       </main>
 
       <footer> <!--Bloque-->
@@ -157,7 +185,7 @@
           <div class="container">
             <div class="row">
               <div class="col-4">
-                <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+                <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
                 <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
                 <p> Mantenete enterado: <br> 
                   <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -168,44 +196,44 @@
                 <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
               </div>
               <!-- top -->
-              <div class="col">
+              <div class="col espaciado">
                 <h4 class="fTitulos">TOP</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
                 <p class="pad20"><a href="top.html">Podio </a></p>
-                <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-                <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+                <p class="pad20"><a href="#">Mejor campeón </a></p>
+                <p class="pad20"><a href="#">Video informativo </a></p>
               </div>
               <!-- jg -->
-              <div class="col">
+              <div class="col espaciado">
                 <h4 class="fTitulos">JUNGLA</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
                 <p class="pad20"><a href="#">Podio </a></p>
-                <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-                <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+                <p class="pad20"><a href="#">Mejor campeón    </a></p>
+                <p class="pad20"><a href="#">Video informativo    </a></p>
               </div>
               <!-- mid -->
-              <div class="col">
+              <div class="col espaciado">
                 <h4 class="fTitulos">MID</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
                 <p class="pad20"><a href="#">Podio </a></p>
-                <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-                <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+                <p class="pad20"><a href="#">Mejor campeón    </a></p>
+                <p class="pad20"><a href="#">Video informativo    </a></p>
               </div>
               <!-- adc -->
-              <div class="col">
+              <div class="col espaciado">
                 <h4 class="fTitulos">ADC</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
                 <p class="pad20"><a href="#">Podio </a></p>
-                <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-                <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+                <p class="pad20"><a href="#">Mejor campeón    </a></p>
+                <p class="pad20"><a href="#">Video informativo    </a></p>
               </div>
               <!-- supp -->
-              <div class="col">
+              <div class="col espaciado">
                 <h4 class="fTitulos">SUPPORT</h4>
                 <p class="pad20"><a href="#">Inicio </a></p>
                 <p class="pad20"><a href="#">Podio </a></p>
-                <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-                <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+                <p class="pad20"><a href="#">Mejor campeón    </a></p>
+                <p class="pad20"><a href="#">Video informativo    </a></p>
               </div>
               
             </div>
