--- a/bot.html
+++ b/bot.html
@@ -77,10 +77,14 @@
         </div>
       </div>
     </nav>
+
+    <!-- BANNER -->
   <div class="">
     <img src="multimedia/kalista.jpg" alt="" width="100%">
   </div>
 
+
+  <!-- INTRO -->
   <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
       <h1 class="texto__titulo">Lista de tiers predictivos para el carril Inferior</h1>
@@ -88,6 +92,8 @@
     </div>
   </div>
   
+
+  <!-- PODIO -->
   <div class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot bordeSolido pad20 mar40">
     <div class="col row-cols-md-">
       <div class="card h-100">
@@ -125,6 +131,9 @@
       </div>
     </div>
   </div>
+
+  <!-- INTRODUCCION CAMPEON DESTACADO -->
+
     <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
       <div class="texto"> <!--Bloque-->
         <h3 class="texto__titulo">Campeón destacado: Ashe</h3>
@@ -135,13 +144,28 @@
       </div>
     </div>
   
+<!-- RUNAS Y BUILD DEL CAMPEON DESTACADO -->
+
     <section class="runasybuild centrar">
       <img class="centrar" src="multimedia/ashesovich.jpg" alt="">
       <img class="centrar" src="multimedia/.png" alt="">
     </section>
   
-    <p class="experto pad20 centrar">
-          <iframe width="50%" height="540" src="https://www.youtube.com/embed/3QnRCouW9qg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
+
+<!-- INTRODUCCION A VIDEO -->
+
+<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div class="texto"> <!--Bloque-->
+    <h3 class="texto__titulo"> Video informativo y didáctico </h3>
+      <p class="texto__texto">¡A continuación verás un video didactico altamente recomendado para poder aprender a jugar el campeon que recomendamos y cansarte de ganar partidas en soloQ!</p>
+  </div>
+</div>
+
+
+<!-- VIDEO COMPLEMENTARIO -->
+
+    <p class="experto pad20 centrar margenBot">
+          <iframe width="50%" height="540" src="https://www.youtube.com/embed/cFPOJTDpNO4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
     </p>
   
     <footer> <!--Bloque-->
@@ -149,50 +173,55 @@
         <div class="container">
           <div class="row">
             <div class="col-4">
-              <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+              <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
               <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
               <p> Mantenete enterado: <br> 
                 <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
                 <a href="#"><img class="redes" src="multimedia/facebook (1).png" alt="link al discord" width="10%" height="10%"> </a>
                 <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
               </p>
-              <p><br><br>
-              hecho por ferxdxdddd</p>
+              <p class="centrar">
+              <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
             </div>
-            <div class="col">
+            <!-- top -->
+            <div class="col espaciado">
               <h4 class="fTitulos">TOP</h4>
               <p class="pad20"><a href="#">Inicio </a></p>
               <p class="pad20"><a href="top.html">Podio </a></p>
-              <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-              <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+              <p class="pad20"><a href="#">Mejor campeón </a></p>
+              <p class="pad20"><a href="#">Video informativo </a></p>
             </div>
-            <div class="col">
+            <!-- jg -->
+            <div class="col espaciado">
               <h4 class="fTitulos">JUNGLA</h4>
               <p class="pad20"><a href="#">Inicio </a></p>
               <p class="pad20"><a href="#">Podio </a></p>
-              <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-              <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+              <p class="pad20"><a href="#">Mejor campeón    </a></p>
+              <p class="pad20"><a href="#">Video informativo    </a></p>
             </div>
-            <div class="col">
+            <!-- mid -->
+            <div class="col espaciado">
               <h4 class="fTitulos">MID</h4>
               <p class="pad20"><a href="#">Inicio </a></p>
               <p class="pad20"><a href="#">Podio </a></p>
-              <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-              <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+              <p class="pad20"><a href="#">Mejor campeón    </a></p>
+              <p class="pad20"><a href="#">Video informativo    </a></p>
             </div>
-            <div class="col">
+            <!-- adc -->
+            <div class="col espaciado">
               <h4 class="fTitulos">ADC</h4>
               <p class="pad20"><a href="#">Inicio </a></p>
               <p class="pad20"><a href="#">Podio </a></p>
-              <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-              <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+              <p class="pad20"><a href="#">Mejor campeón    </a></p>
+              <p class="pad20"><a href="#">Video informativo    </a></p>
             </div>
-            <div class="col">
+            <!-- supp -->
+            <div class="col espaciado">
               <h4 class="fTitulos">SUPPORT</h4>
               <p class="pad20"><a href="#">Inicio </a></p>
               <p class="pad20"><a href="#">Podio </a></p>
-              <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-              <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+              <p class="pad20"><a href="#">Mejor campeón    </a></p>
+              <p class="pad20"><a href="#">Video informativo    </a></p>
             </div>
             
           </div>
@@ -200,7 +229,6 @@
     </div>
   
   </footer>
-  
     <!--JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
