--- a/coach.html
+++ b/coach.html
@@ -150,6 +150,15 @@
 
 
 
+<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+  <div class="texto"> <!--Bloque-->
+    <h2 class="texto__titulo">Métodos de contacto y pago</h2>
+    <p class="texto__texto"> Para contactarnos vamos a usar nuestro discord, la plataforma donde tambien se llevarán a cabo las sesiones de coaching, donde además vamos a responder todas las dudas de cada uno, interactuar con cada uno para armar planes personalizados con su respectiva tarifa personalizada en caso de necesitarlo, metodos de pago y demás, todo es conversable.</p>
+      <br>
+      <p class="texto__texto"> <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="25%" height="25%"></p>
+  </div>
+</div>
+
 
 
 
@@ -159,7 +168,7 @@
     <div class="container">
       <div class="row">
         <div class="col-4">
-          <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+          <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
           <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
           <p> Mantenete enterado: <br> 
             <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -167,47 +176,47 @@
             <a href="#"><img class="redes" src="multimedia/youtube.png" alt="link al discord" width="10%" height="10%"> </a>
           </p>
           <p class="centrar">
-          <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
+          <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="META ABUSER" height="33%" width="33%"></p>
         </div>
         <!-- top -->
-        <div class="col">
+        <div class="col espaciado">
           <h4 class="fTitulos">TOP</h4>
           <p class="pad20"><a href="#">Inicio </a></p>
           <p class="pad20"><a href="top.html">Podio </a></p>
-          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+          <p class="pad20"><a href="#">Mejor campeón </a></p>
+          <p class="pad20"><a href="#">Video informativo </a></p>
         </div>
         <!-- jg -->
-        <div class="col">
+        <div class="col espaciado">
           <h4 class="fTitulos">JUNGLA</h4>
           <p class="pad20"><a href="#">Inicio </a></p>
           <p class="pad20"><a href="#">Podio </a></p>
-          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+          <p class="pad20"><a href="#">Mejor campeón    </a></p>
+          <p class="pad20"><a href="#">Video informativo    </a></p>
         </div>
         <!-- mid -->
-        <div class="col">
+        <div class="col espaciado">
           <h4 class="fTitulos">MID</h4>
           <p class="pad20"><a href="#">Inicio </a></p>
           <p class="pad20"><a href="#">Podio </a></p>
-          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+          <p class="pad20"><a href="#">Mejor campeón    </a></p>
+          <p class="pad20"><a href="#">Video informativo    </a></p>
         </div>
         <!-- adc -->
-        <div class="col">
+        <div class="col espaciado">
           <h4 class="fTitulos">ADC</h4>
           <p class="pad20"><a href="#">Inicio </a></p>
           <p class="pad20"><a href="#">Podio </a></p>
-          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+          <p class="pad20"><a href="#">Mejor campeón    </a></p>
+          <p class="pad20"><a href="#">Video informativo    </a></p>
         </div>
         <!-- supp -->
-        <div class="col">
+        <div class="col espaciado">
           <h4 class="fTitulos">SUPPORT</h4>
           <p class="pad20"><a href="#">Inicio </a></p>
           <p class="pad20"><a href="#">Podio </a></p>
-          <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-          <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+          <p class="pad20"><a href="#">Mejor campeón    </a></p>
+          <p class="pad20"><a href="#">Video informativo    </a></p>
         </div>
         
       </div>
