--- a/top.html
+++ b/top.html
@@ -77,15 +77,21 @@
         </div>
       </div>
     </nav>
-  <!-- banner -->
-<div><img src="multimedia/urgot.jpg" alt="" width="100%"></div>
+  <!-- BANNER -->
+<div>
+  <img src="multimedia/urgot.jpg" alt="" width="100%">
+</div>
 
+
+<!-- INTRO -->
 <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
   <div class="texto"> <!--Bloque-->
     <h1 class="texto__titulo">Lista de tiers predictivos de League of Legends para el carril Superior</h1>
       <p class="texto__texto">Aquí encontrarás el podio con los tres mejores picks para el carril superior, además de links directos a la sección específica del campeón en probuilds.com</p>
  </div>
 </div>
+
+
 <!-- PODIO TOP -->
   <div id=podioTop class="row row-cols-1 row-cols-md-4 g-1 centrado centrar margenBot bordeSolido pad20 mar40">
     <div class="col row-cols-md-">
@@ -125,6 +131,7 @@
     </div>
   </div>
   
+  <!-- INTRODUCCION CAMPEON DESTACADO -->
   <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
     <div class="texto"> <!--Bloque-->
       <h2 class="texto__titulo">Campeón destacado: Shen</h2>
@@ -138,21 +145,24 @@
     </div>
   </div>
 
+
+<!-- RUNAS Y BUILD DE CAMPEON -->
   <section class="runasybuild centrar">
   <img class="centrar" src="multimedia/shennnn.png" alt="">
   <img class="centrar" src="" alt="">
 </section>
 
-<div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
-  <div class="texto"> <!--Bloque-->
-    <h3 class="texto__titulo"> Video informativo y didáctico </h3>
-      <p class="texto__texto">¡A continuación verás un video didactico altamente recomendado para poder aprender a jugar el campeon que recomendamos y cansarte de ganar partidas en soloQ!</p>
+  <!-- INTRODUCCION A VIDEO -->
+  <div class="intro bordeSolido margenBot  container mx-auto w-26 bordeSolido">
+    <div class="texto"> <!--Bloque-->
+      <h3 class="texto__titulo"> Video informativo y didáctico </h3>
+        <p class="texto__texto">¡A continuación verás un video didactico altamente recomendado para poder aprender a jugar el campeon que recomendamos y cansarte de ganar partidas en soloQ!</p>
+    </div>
   </div>
-</div>
+  
 
-<!-- VIDEO -->
-
-  <p class="experto pad20 centrar">
+<!-- VIDEO COMPLEMENTARIO -->
+  <p class="experto pad20 centrar margenBot">
         <iframe width="50%" height="540" src="https://www.youtube.com/embed/3QnRCouW9qg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture centrar" allowfullscreen></iframe>
   </p>
 
@@ -161,7 +171,7 @@
       <div class="container">
         <div class="row">
           <div class="col-4">
-            <p class="pad20"><br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt ex fugiat animi possimus sequi quia saepe non in vero deleniti minima fuga est rerum reiciendis, hic et! Labore, iure rerum?</p>
+            <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
             <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
             <p> Mantenete enterado: <br> 
               <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -172,44 +182,44 @@
             <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
           </div>
           <!-- top -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">TOP</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="top.html">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón </a></p>
+            <p class="pad20"><a href="#">Video informativo </a></p>
           </div>
           <!-- jg -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">JUNGLA</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón    </a></p>
+            <p class="pad20"><a href="#">Video informativo    </a></p>
           </div>
           <!-- mid -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">MID</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón    </a></p>
+            <p class="pad20"><a href="#">Video informativo    </a></p>
           </div>
           <!-- adc -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">ADC</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón    </a></p>
+            <p class="pad20"><a href="#">Video informativo    </a></p>
           </div>
           <!-- supp -->
-          <div class="col">
+          <div class="col espaciado">
             <h4 class="fTitulos">SUPPORT</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
             <p class="pad20"><a href="#">Podio </a></p>
-            <p class="pad20"><a href="#">¿Por qué este es el mejor campeón? </a></p>
-            <p class="pad20"><a href="#">Video informativo y explicativo </a></p>
+            <p class="pad20"><a href="#">Mejor campeón    </a></p>
+            <p class="pad20"><a href="#">Video informativo    </a></p>
           </div>
           
         </div>
