--- a/mid.html
+++ b/mid.html
@@ -168,7 +168,6 @@
   </p>
 
   <main class="gridContainer2  container mx-auto w-26 turboMain margenBot">
-    <h2 class="tituloCounters centrado margenBot">Campeones <span class="verde">débiles</span> y <span class="rojo">fuertes</span> para Vladimir </h2>
     <section class="margencito ffl margenBot "><img class="ffl bordeVerde floatLeft" src="multimedia/fase rush.jpg" alt="" height="50%" width="50%">
       <p class="dColumn"><img class="bordeVerde" src="multimedia/adcs.jpg" alt="" width="100%" height="100%">
       <img class="bordeVerde" src="multimedia/magos lol.jpg" alt="" width="100%" height="100%">
@@ -198,8 +197,9 @@
     <div class="centrar">
       <div class="container">
         <div id="grideano" class="row">
-          <div class="col-4">
-            <p class="pad20"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
+          <div class="primerColumna">
+          <div class="col-9">
+            <p class="pad20 centrar"><br> Esta página web fue creada para ayudar a los jugadores de habla hispana a subir de liga en League of Legends, por Fernando Aveledo.</p>
             <p class=""> Unite a nuestro discord: <br> <a href="#"><img class="discord" src="multimedia/discord.png" alt="link al discord" width="10%" height="10%"> <br></a></p>
             <p> Mantenete enterado: <br> 
               <a href="#"><img class="redes" src="multimedia/instagram.png" alt="link al discord" width="10%" height="10%"> </a>  
@@ -209,7 +209,8 @@
             <p class="centrar">
             <img class="centrado" src="multimedia/LOGO META ABUSER.png" alt="" height="33%" width="33%"></p>
           </div>
-          <!-- top -->
+        </div>
+         <div class="segundaColumna"> <!-- top -->
           <div class="col espaciado">
             <h4 class="fTitulos">TOP</h4>
             <p class="pad20"><a href="#">Inicio </a></p>
@@ -248,7 +249,7 @@
             <p class="pad20"><a href="#">Podio </a></p>
             <p class="pad20"><a href="#">Mejor campeón    </a></p>
             <p class="pad20"><a href="#">Video informativo    </a></p>
-          </div>
+          </div></div>
           
         </div>
       </div>
